/*
 * Copyright (c) 2017 - 2018, The casual project. All rights reserved.
 *
 * This software is licensed under the MIT license, https://opensource.org/licenses/MIT
 */

//-*- coding: utf-8 -*-
buildscript {
    repositories {
        maven { url 'http://repo.spring.io/plugins-release' }
    }
    dependencies {
        classpath 'io.spring.gradle:propdeps-plugin:0.0.9.RELEASE'
    }
}

plugins {
    id 'org.sonarqube' version '2.7'
}

apply from: 'testsourcesets.gradle'

allprojects{
    apply plugin: 'propdeps'
    apply plugin: 'propdeps-maven'
    apply plugin: 'propdeps-idea'
    apply plugin: 'propdeps-eclipse'
}

defaultTasks 'build'

sonarqube {
    properties {
        properties["sonar.host.url"] = 'http://localhost:9000'
        properties["sonar.verbose"] = "true"
        properties['sonar.java.source'] = 8
    }
}





allprojects{
  tasks.withType(JavaCompile) { 
    sourceCompatibility = "8"
    targetCompatibility = "8"
    options.compilerArgs << "-Xlint:all" << "-Werror"
  }
  repositories {
    mavenCentral()
  }
}

subprojects{
  apply from: "$rootProject.projectDir/versions.gradle"
}


task dist(type: Copy, dependsOn: getTasksByName("build", false)) {
    subprojects.each { subproject ->
            from "$subproject.buildDir/libs"
            into "$rootProject.projectDir/dist"
    }
}
